#10 add put restore and refactoring return bool
